# multi-tenant-time-travel-architecture

./: DEMO_QUICK_START.md  Makefile  README.md  pyproject.toml  requirements.txt
api/: app.py  queries.py  session_store.py
docs/: CLAUDE.md  PRD.md  PRESENTER_GUIDE.md  TAXONOMY_IMPLEMENTATION_PLAN.md  TEST_STATUS.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  tenantColors.ts  useGraphPane.ts
frontend/src/components/: DatabaseSelect.tsx  GraphPane.tsx  GraphView.tsx  LoginForm.tsx  TenantSelect.tsx  TenantTimeline.tsx  TimeSlider.tsx
scripts/: aqlizer_demo.py
